--- a/en/islande.html
+++ b/en/islande.html
@@ -9,7 +9,7 @@ x-data="{"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Projet individuel MMI Montbéliard">
 
-        <title>Earth Topic</title>
+        <title>Iceland - Earth Topic</title>
 
         <link rel="icon" href="/public/icones/shiny_glossy_earth_logo.png" />
         <link rel="stylesheet" href="/src/css/pages/style.css">
