Home anglais : réglage bug

--- a/en/index.html
+++ b/en/index.html
@@ -118,7 +118,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>A WORLD IN DANGER ?</h2>
                             <p>If we look at the Earth in 2022 and the prevention messages of NGO, how can we not be afraid of a future where nature will be completely destroyed? If we want to be able to act, we must already open our eyes to what could happen if we do nothing.</p>
                         </div>
-                        <a href="/fr/craintes.html" class="article__button">
+                        <a href="/en/craintes.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -129,7 +129,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>INTERSTELLAR</h2>
                             <p>Interstellar is a science fiction movie released in 2014 and directed by Christopher Nolan, it’s the perfect example of what could happen in the future if we do nothing. This story is science fiction but it might not be so far from reality or at least to a future reality.</p>
                         </div>
-                        <a href="/fr/interstellar.html" class="article__button">
+                        <a href="/en/interstellar.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -140,7 +140,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>ICELAND</h2>
                             <p>If you are still not sure of what is happening, I chose a more concrete example. Iceland is one of many countries already affected by the consequences of global warming with an ice surface contracting from year to year. This country is a perfect example of what we can fear for the future.</p>
                         </div>
-                        <a href="/fr/islande.html" class="article__button"> 
+                        <a href="/en/islande.html" class="article__button"> 
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -151,7 +151,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>HOPE</h2>
                             <p>But not everything is lost, there is always hope. This hope is represented by nature. If we live in harmony with it rather than destroy it, we could change the situation. The challenge of this century is to realize all the things that nature can bring to us. And this future is not just a fantasist story. It can really exist if we act.</p>
                         </div>
-                        <a href="/fr/espoir.html" class="article__button">
+                        <a href="/en/espoir.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -162,7 +162,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>"WHERE THE CRAWDADS SING"</h2>
                             <p>To prove that this world can exist, I chose a book called “Where the crawdads sing”and written by Delia Owens. The story follows a young girl living alone in the swamps of North Carolina. Her life is the perfect example of a possible cohesion with nature.</p>
                         </div>
-                        <a href="/fr/livre.html" class="article__button">
+                        <a href="/en/livre.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -173,7 +173,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>"CAROLINA"</h2>
                             <p>This music is from the film adaptation of the book «Where the crawdads sing». This song was written by the famous artist Taylor Swift. The lyrics of this music remind the life of the main character in the book and also the nature. It’s for this last reason that this music is particularly interesting, both in terms of lyrics and music.</p> 
                         </div>
-                        <a href="/fr/carolina.html" class="article__button">
+                        <a href="/en/carolina.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
@@ -184,7 +184,7 @@ x-data="{menuIsOpen: false}" :class="{noscroll:menuIsOpen,}"
                             <h2>HOW TO ACT ?</h2>
                             <p>I have presented you two possible futures, but it’s to you to decide which one you want now. To help you if you choose the second future, I have selected some sites that propose concrete and feasible action to do in your daily life.</p> 
                         </div>
-                        <a href="/fr/comment_agir.html" class="article__button">
+                        <a href="/en/comment_agir.html" class="article__button">
                             READ ARTICLE <img src="/public/icones/arrow-right_1.webp" alt="arrow" class="article__button--fleche">
                         </a>
                     </div>
